fix dialog height on mobile

--- a/src/app/customer/reservation/cancellation-policy-dialog/cancellation-policy-dialog.component.scss
+++ b/src/app/customer/reservation/cancellation-policy-dialog/cancellation-policy-dialog.component.scss
@@ -34,4 +34,6 @@
 
 ::ng-deep .mat-dialog-container {
     background-color: #f3eacd;
+    height: auto;
+    overflow: hidden;
 }
