--- a/src/commons/components/global-error-dialog/global-error-dialog.component.scss
+++ b/src/commons/components/global-error-dialog/global-error-dialog.component.scss
@@ -20,6 +20,8 @@
 
 ::ng-deep .mat-dialog-container {
     background-color: #f3eacd;
+	height: auto;
+    overflow: hidden;
 }
 
 body {
