--- a/src/commons/components/reservation-confirm-dialog/reservation-confirm-dialog.component.scss
+++ b/src/commons/components/reservation-confirm-dialog/reservation-confirm-dialog.component.scss
@@ -176,6 +176,8 @@
 
 ::ng-deep .mat-dialog-container {
     background-color: #f3eacd;
+	height: auto;
+    overflow: hidden;
 }
 
 
