--- a/src/commons/components/time-picker-dialog/time-picker-dialog.component.scss
+++ b/src/commons/components/time-picker-dialog/time-picker-dialog.component.scss
@@ -79,4 +79,6 @@
 
 ::ng-deep .mat-dialog-container {
     background-color: #f3eacd;
+    height: auto;
+    overflow: hidden;
 }
